# CanGovLM

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: README.md
benchmarks/: README.md
checkpoints/: README.md
configs/data/: source_registry.json
corpus/: README.md
corpus/en/: README.md
corpus/fr/: README.md
data/: README.md
demo/: README.md
docs/: corpus_specification.md  data_sources.md  design_notes.md  experiments.md  roadmap.md
inference/: README.md
notebooks/: README.md
scripts/: README.md
src/cangovlm/data/: __init__.py  acquisition.py  extraction.py  manifests.py  single_document_pipeline.py  source_registry.py
src/cangovlm/model/: __init__.py  attention.py  config.py  embeddings.py  normalization.py
src/cangovlm/tokenizer/: __init__.py  bpe.py  bytes.py  corpus.py  decoding.py  encoding.py  vocabulary.py
tests/data/: test_acquisition.py  test_canada_ca_acquisition.py  test_extraction.py  test_html_extractor.py  test_manifests.py  test_single_document_pipeline.py  test_source_registry.py
tests/fixtures/html/: chrome_only.html  french_page.html  official_page.html
tests/model/: test_attention.py  test_config.py  test_embeddings.py  test_normalization.py  test_positional_embeddings.py
tests/tokenizer/: test_bpe.py  test_bytes.py  test_corpus.py  test_decoding.py  test_encoding.py  test_vocabulary.py
vocabulary/: README.md
